<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.detail.match.MatchDetailActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:id="@+id/detail_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Date Match"
                    android:textSize="20sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    android:id="@+id/detail_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Time"
                    android:textSize="16sp"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:layout_gravity="center_horizontal"/>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_horizontal">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_weight="0.8">
                    <ImageView
                            android:id="@+id/home_logo"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="20dp"/>
                    <TextView
                            android:id="@+id/detail_home_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:textSize="25sp"
                            android:gravity="center"
                            android:textColor="@color/colorPrimary"
                            android:layout_gravity="center_horizontal"/>
                </LinearLayout>
                <TextView
                        android:id="@+id/detail_home_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0"
                        android:textSize="40sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/vs"
                        android:textSize="30sp"
                        android:layout_gravity="center"
                        android:padding="5dp"/>
                <TextView
                        android:id="@+id/detail_away_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="0"
                        android:textSize="40sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:layout_gravity="center"/>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_weight="0.8">
                    <ImageView
                            android:id="@+id/away_logo"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_margin="20dp"/>
                    <TextView
                            android:id="@+id/detail_away_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="15dp"
                            android:textSize="25sp"
                            android:textColor="@color/colorPrimary"
                            android:layout_gravity="center_horizontal"/>
                </LinearLayout>
            </LinearLayout>
            <View style="@style/LineDivider"/>
            <TextView
                    style="@style/MiddleText"
                    android:text="@string/goals"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/ViewContent.Left"
                        android:id="@+id/goal_home"/>
                <TextView
                        style="@style/ViewContent.Right"
                        android:id="@+id/goal_away"/>
            </RelativeLayout>
            <TextView
                    style="@style/MiddleText"
                    android:text="@string/shots"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/ViewContent.Left"
                        android:id="@+id/home_shot"/>
                <TextView
                        style="@style/ViewContent.Right"
                        android:id="@+id/away_shot"/>
            </RelativeLayout>
            <View style="@style/LineDivider"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lineups"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:padding="16dp"
                    android:layout_gravity="center_horizontal"/>
            <TextView
                    style="@style/MiddleText"
                    android:text="@string/goal_keeper"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/ViewContent.Left"
                        android:id="@+id/goalkeeper_home"/>
                <TextView
                        style="@style/ViewContent.Right"
                        android:id="@+id/goalkeeper_away"/>
            </RelativeLayout>
            <TextView
                    style="@style/MiddleText"
                    android:text="@string/defense"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/ViewContent.Left"
                        android:id="@+id/defense_home"/>
                <TextView
                        style="@style/ViewContent.Right"
                        android:id="@+id/defense_away"/>
            </RelativeLayout>
            <TextView
                    style="@style/MiddleText"
                    android:text="@string/midfield"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/ViewContent.Left"
                        android:id="@+id/midfield_home"/>
                <TextView
                        style="@style/ViewContent.Right"
                        android:id="@+id/midfield_away"/>
            </RelativeLayout>
            <TextView
                    style="@style/MiddleText"
                    android:text="@string/forward"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/ViewContent.Left"
                        android:id="@+id/forward_home"/>
                <TextView
                        style="@style/ViewContent.Right"
                        android:id="@+id/forward_away"/>
            </RelativeLayout>
            <TextView
                    style="@style/MiddleText"
                    android:text="@string/substitutes"/>
            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        style="@style/ViewContent.Left"
                        android:id="@+id/substitutes_home"/>
                <TextView
                        style="@style/ViewContent.Right"
                        android:id="@+id/substitutes_away"/>
            </RelativeLayout>
        </LinearLayout>
        <ProgressBar
                android:id="@+id/detail_progress_bar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>